--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -11,8 +11,10 @@
     "composite": true,
     "noEmit": true,
     "tsBuildInfoFile": "./node_modules/.tmp/tsconfig.node.tsbuildinfo",
-
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
     "module": "ESNext",
+    "target": "ES6",
     "moduleResolution": "Bundler",
     "types": ["node"]
   }
